[gd_scene load_steps=9 format=3 uid="uid://bmqkbdc4xqcom"]

[ext_resource type="Script" path="res://app/menus/main_menu/menu_cursos.gd" id="1_oh6sc"]
[ext_resource type="Script" path="res://app/menus/main_menu/CourseManager.gd" id="2_dljcn"]
[ext_resource type="Texture2D" uid="uid://cia8kqk8nlsgd" path="res://assets/icons/icon.svg" id="2_njs6q"]
[ext_resource type="Theme" uid="uid://ca5r1q0balh1g" path="res://Themes/main_screen.tres" id="2_wreat"]
[ext_resource type="Texture2D" uid="uid://cbj4072yefdhx" path="res://assets/icons/setting.png" id="3_1wne3"]
[ext_resource type="Texture2D" uid="uid://cdxhva80s106i" path="res://app/common/assets/backgrounds/background.png" id="3_8gfyd"]
[ext_resource type="Texture2D" uid="uid://bwiktvpsa4652" path="res://assets/masks/whiteCircle.png" id="3_ex5l2"]
[ext_resource type="Texture2D" uid="uid://dv31jgvu4qsll" path="res://assets/icons/3602745.png" id="4_l0u1p"]

[node name="Menu_Cursos" type="Node"]
script = ExtResource("1_oh6sc")

[node name="CourseManager" type="Node" parent="."]
script = ExtResource("2_dljcn")

[node name="Background" type="Control" parent="."]
custom_minimum_size = Vector2(1180, 980)
layout_mode = 3
anchor_top = 0.063
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.64
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundImage" type="Sprite2D" parent="Background"]
position = Vector2(591, 666)
rotation = 1.5708
scale = Vector2(0.235, 0.278415)
texture = ExtResource("3_8gfyd")

[node name="MainScreen" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.998977, 0.997546)
theme = ExtResource("2_wreat")

[node name="UpMenu" type="PanelContainer" parent="MainScreen"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerBar" type="HBoxContainer" parent="MainScreen/UpMenu"]
layout_mode = 2

[node name="UserIcon" type="TextureRect" parent="MainScreen/UpMenu/PlayerBar"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 2
texture = ExtResource("3_ex5l2")
expand_mode = 2

[node name="TextureRect" type="TextureRect" parent="MainScreen/UpMenu/PlayerBar/UserIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.789836, 0.776262)
texture = ExtResource("2_njs6q")

[node name="UserInfo" type="VBoxContainer" parent="MainScreen/UpMenu/PlayerBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UserName" type="Label" parent="MainScreen/UpMenu/PlayerBar/UserInfo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Oscar Orellana"

[node name="Points" type="Label" parent="MainScreen/UpMenu/PlayerBar/UserInfo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "3212pts
"
horizontal_alignment = 1

[node name="Div" type="Control" parent="MainScreen/UpMenu/PlayerBar/UserInfo"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Div" type="Control" parent="MainScreen/UpMenu/PlayerBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="MainButtons" type="HBoxContainer" parent="MainScreen/UpMenu/PlayerBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="NotificationButton" type="Button" parent="MainScreen/UpMenu/PlayerBar/MainButtons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
icon = ExtResource("4_l0u1p")
flat = true
expand_icon = true

[node name="ConfigButton" type="Button" parent="MainScreen/UpMenu/PlayerBar/MainButtons"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
icon = ExtResource("3_1wne3")
flat = true
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="MainScreen"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 12.0
vertical_scroll_mode = 2

[node name="Course_Level_Container" type="VBoxContainer" parent="MainScreen/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DownMenu" type="PanelContainer" parent="MainScreen"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="MainScreen/DownMenu"]
layout_mode = 2

[node name="DesafiosButton" type="Button" parent="MainScreen/DownMenu/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Desafios"
flat = true

[node name="CursosButton" type="Button" parent="MainScreen/DownMenu/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cursos"
flat = true

[node name="TiendaButton" type="Button" parent="MainScreen/DownMenu/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tienda
"
flat = true

[connection signal="pressed" from="MainScreen/UpMenu/PlayerBar/MainButtons/NotificationButton" to="." method="_on_notification_button_pressed"]
[connection signal="pressed" from="MainScreen/UpMenu/PlayerBar/MainButtons/ConfigButton" to="." method="_on_config_button_pressed"]
[connection signal="pressed" from="MainScreen/DownMenu/ButtonContainer/CursosButton" to="." method="_on_cursos_button_pressed"]
